app-test/testdata/typesystem/neg/pattern-matching-deconstructor-arg-number/src/patmat.cal
namespace patmat:
    type T : (int a, bool b) end
    T t;
    actor DeconstructorWrongArgumentNumber() ==> int OUT:
        do
            OUT <--
                case t of
                    T(1, true, 2.5) : 1 end // error
                    _ : 0 end
                end;
        end
    end
end